--- a/ProcessessSimulator.cbp
+++ b/ProcessessSimulator.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-pthread" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/ProcessessSimulator" prefix_auto="1" extension_auto="1" />
@@ -25,6 +28,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-pthread" />
 				</Linker>
 			</Target>
 		</Build>
@@ -34,6 +38,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="params.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="params.h" />
 		<Unit filename="thread.c">
 			<Option compilerVar="CC" />
 		</Unit>
