--- a/SimulatorClient/SimulatorClient.cbp
+++ b/SimulatorClient/SimulatorClient.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-pthread" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/SimulatorClient" prefix_auto="1" extension_auto="1" />
