--- a/SimulatorServer/SimulatorServer.cbp
+++ b/SimulatorServer/SimulatorServer.cbp
@@ -37,6 +37,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="serverStructures.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="serverStructures.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
