--- a/SimulatorServer/SimulatorServer.cbp
+++ b/SimulatorServer/SimulatorServer.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-std=c99" />
 				</Compiler>
 				<Linker>
 					<Add option="-pthread" />
